--- a/style.css
+++ b/style.css
@@ -1,2 +1,25 @@
 body {font-size: 20px;
-background-color: aquamarine;}
+background-color: gainsboro;
+background-image: url("img/background.jpg");
+background-size: cover; 
+-moz-background-size: cover; 
+-o-background-size: cover; 
+-webkit-background-size: cover;
+background-repeat: no-repeat;
+background-attachment: fixed;
+color: white;
+margin: 2%;
+padding: 1%;
+font-family: 'Quicksand', sans-serif;
+font-weight: lighter;}
+header {text-align: center;
+font-weight: bolder;
+font-size: 30px;}
+p, ul {background-color: rgba(0, 103, 126, 0.7);
+width: 1000px;
+padding-bottom: 10px;
+padding-top: 10px;}
+.underline {text-decoration: underline;}
+ul {width: 900px}
+img { height:200px; width: 330px; transition:width 0.5s ease; border-radius: 10%; }
+#galery:hover img { height:300px; width:400px; }
