--- a/style.css
+++ b/style.css
@@ -12,14 +12,27 @@ margin: 2%;
 padding: 1%;
 font-family: 'Quicksand', sans-serif;
 font-weight: lighter;}
-header {text-align: center;
+header{text-align: center;
 font-weight: bolder;
 font-size: 30px;}
 p, ul {background-color: rgba(0, 103, 126, 0.7);
 width: 1000px;
 padding-bottom: 10px;
-padding-top: 10px;}
+padding-top: 10px;
+line-height: 30px;}
+aside {background-color: rgba(0, 103, 126, 0.7);
+    padding-bottom: 10px;
+    padding-top: 10px;
+float: right;
+text-align: center;}
 .underline {text-decoration: underline;}
 ul {width: 900px}
 img { height:200px; width: 330px; transition:width 0.5s ease; border-radius: 10%; }
 #galery:hover img { height:300px; width:400px; }
+a{color: white}
+nav {line-height: 35px;}
+footer {text-align: center;
+    font-weight: bolder;
+    font-size: 30px;
+    background-color: rgba(0, 103, 126, 0.7);
+width: 77%}
